@@ -12,6 +12,7 @@ syslog-ng (3.19.1-1) UNRELEASED; urgency=medium
   * Update configuration version.
   * Update self-tests.
   * Remove own compression option.
+  * Prepare for Python 3 module.
 
  -- Laszlo Boszormenyi (GCS) <gcs@debian.org>  Tue, 25 Dec 2018 09:40:28 +0000
 
